add list of applications (still need to implement)

--- a/docs/report.tex
+++ b/docs/report.tex
@@ -167,7 +167,54 @@ always not null.
 
 \section{List of Applications}
 
-TODO
+\begin{enumerate}[label=(\arabic*)]
+    \item 
+    input: driver, season
+
+    output: driver's race results across that season 
+
+    \item
+    input: season
+
+    output: summary of the driver's results across that season
+
+    \item
+    input: season
+
+    output: summary of the team (constructor) results of that season
+
+    \item 
+    input: driver, season
+
+    output: best and worst results of that driver 
+
+    \item 
+    input: driver, season
+
+    output: average results of that driver across that season
+
+    \item 
+    input: team, season
+
+    output: average results of that team across that season
+
+    \item 
+    input: team, season 
+
+    output: for each race in that season, compare the results of the
+    drivers in that team
+
+    \item 
+    input: race, season 
+    
+    output: summary of the driver's results from that race in that season
+
+    \item 
+    input: race, season 
+    
+    output: summary of the team's results from that race in that season
+
+\end{enumerate}
 
 
 \section{User's Guide}
