--- a/docs/report.tex
+++ b/docs/report.tex
@@ -168,48 +168,48 @@ always not null.
 \section{List of Applications}
 
 \begin{enumerate}[label=(\arabic*)]
-    \item % driver_season_res.php
+    \item % driver_season_res.php -- TODO
     input: driver, season
 
     output: A single driver's race results across that season 
 
-    \item % season_results.php
+    \item % season_driver_results.php -- DONE
     input: season
 
     output: summary of the all driver's results across that season
 
-    \item % season_results.php
+    \item % season_team_results.php -- DONE
     input: season
 
     output: summary of the team (constructor) results of that season
 
-    \item % driver_best_worst_season.php
+    \item % driver_best_worst_season.php -- TODO
     input: driver, season
 
     output: best and worst results of that driver 
 
-    \item % driver_avg_season.php
+    \item % driver_avg_season.php -- TODO
     input: driver, season
 
     output: average results of that driver across that season
 
-    \item % team_avg_season.php
+    \item % team_avg_season.php -- TODO
     input: team, season
 
     output: average results of that team across that season
 
-    \item % team_driver_cmp_season.php
+    \item % team_driver_cmp_season.php -- TODO
     input: team, season 
 
     output: for each race in that season, compare the results of the
     drivers in that team
 
-    \item % race_driver_res.php
+    \item % race_driver_res.php -- TODO
     input: race, season 
     
     output: summary of the driver's results from that one race in that season
 
-    \item % race_team_res.php
+    \item % race_team_res.php -- TODO
     input: race, season 
     
     output: summary of the team's results from that race in that season
