add one more app

--- a/docs/report.tex
+++ b/docs/report.tex
@@ -173,6 +173,11 @@ always not null.
 
     output: A single driver's race results across that season 
 
+    \item % team_season_res.php -- TODO
+    input: team, season
+
+    output: A single team's race results across that season 
+
     \item % season_driver_results.php -- DONE
     input: season
 
@@ -204,12 +209,12 @@ always not null.
     output: for each race in that season, compare the results of the
     drivers in that team
 
-    \item % race_driver_res.php -- TODO
+    \item % race_driver_res.php -- DONE
     input: race, season 
     
     output: summary of the driver's results from that one race in that season
 
-    \item % race_team_res.php -- TODO
+    \item % race_team_res.php -- DONE
     input: race, season 
     
     output: summary of the team's results from that race in that season
