--- a/docs/report.tex
+++ b/docs/report.tex
@@ -168,15 +168,10 @@ always not null.
 \section{List of Applications}
 
 \begin{enumerate}[label=(\arabic*)]
-    \item % driver_season_res.php -- TODO
+    \item % driver_season_res.php -- DONE
     input: driver, season
 
     output: A single driver's race results across that season 
-
-    \item % team_season_res.php -- TODO
-    input: team, season
-
-    output: A single team's race results across that season 
 
     \item % season_driver_results.php -- DONE
     input: season
@@ -187,11 +182,6 @@ always not null.
     input: season
 
     output: summary of the team (constructor) results of that season
-
-    \item % driver_best_worst_season.php -- TODO
-    input: driver, season
-
-    output: best and worst results of that driver 
 
     \item % driver_avg_season.php -- TODO
     input: driver, season
