add season race info app

--- a/docs/report.tex
+++ b/docs/report.tex
@@ -183,7 +183,7 @@ always not null.
 
     output: summary of the team (constructor) results of that season
 
-    \item % driver_avg_season.php -- TODO
+    \item % driver_avg_season.php -- DONE
     input: driver, season
 
     output: average results of that driver across that season
@@ -208,6 +208,12 @@ always not null.
     input: race, season 
     
     output: summary of the team's results from that race in that season
+
+    \item % season_race_info.php -- TODO
+    input: season
+
+    output: summary of the races in that season (race name, circuit
+    name, circuit length, number of laps, etc.)
 
 \end{enumerate}
 
