--- a/docs/report.tex
+++ b/docs/report.tex
@@ -188,12 +188,12 @@ always not null.
 
     output: average results of that driver across that season
 
-    \item % team_avg_season.php -- TODO
-    input: team, season
+    % \item % team_avg_season.php -- TODO
+    % input: team, season
 
-    output: average results of that team across that season
+    % output: average results of that team across that season
 
-    \item % team_driver_cmp_season.php -- TODO
+    \item % team_driver_cmp_season.php -- DONE
     input: team, season 
 
     output: for each race in that season, compare the results of the
@@ -209,7 +209,7 @@ always not null.
     
     output: summary of the team's results from that race in that season
 
-    \item % season_race_info.php -- TODO
+    \item % season_race_info.php -- DONE
     input: season
 
     output: summary of the races in that season (race name, circuit
